--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,19 +8,19 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+
     "moduleResolution": "bundler",
+    "ignoreDeprecations": "6.0",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./*"]
+    },
+
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
     "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
-    "paths": {
-      "@/*": ["./*"]
-    }
+    "plugins": [{ "name": "next" }]
   },
   "include": [
     "next-env.d.ts",
