--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@achmadk/vite-plugin-svgr": "^2.0.0",
     "next": "16.0.5",
+    "next-compose-plugins": "^2.2.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-router-dom": "^7.9.6",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19.2.7",
